--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ color: #292929;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-image: url('/img/hero_desk@1x.jpg');
+    background-image: url('./img/hero_desk@1x.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -275,7 +275,7 @@ margin-right:5px;
     bottom: 0;
     z-index: -1;
     height: 460px;
-    background-image: url(/img/footer_desk@1x.jpg);
+    background-image: url(./img/footer_desk@1x.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -293,7 +293,7 @@ margin-right:5px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        background-image: url('/img/hero_tab@1x.jpg');
+        background-image: url('./img/hero_tab@1x.jpg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -336,7 +336,7 @@ margin-right:5px;
 
     .footer{
         height: 400px;
-        background-image: url(/img/footer_tab@1x.jpg);
+        background-image: url(./img/footer_tab@1x.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -367,7 +367,7 @@ margin-right:5px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        background-image: url('/img/hero_mob@1x.jpg');
+        background-image: url('./img/hero_mob@1x.jpg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -450,7 +450,7 @@ line-height: 140%;
 
     .footer{
         height: 200px;
-        background-image: url(/img/footer_mob@1x.jpg);
+        background-image: url(./img/footer_mob@1x.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
